<resources>
    <!-- Global -->
    <string name="app_name">Numeric Analyser</string>
    <string name="common_activity_title">Numeric Analyser</string>

    <!-- Welcome Page -->
    <string name="activity_welcome_title">Please select an option:</string>
    <string name="activity_welcome_button_calculator">Calculator</string>
    <string name="activity_welcome_button_julia">Julia</string>
    <string name="activity_welcome_button_about">About</string>

    <!-- About Page -->
    <string name="activity_about_title">Legal Information</string>
    <string name="activity_about_details">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eget enim fermentum, blandit nisl et, dignissim nisi. Ut in orci faucibus, lobortis leo id, commodo libero. In vitae rhoncus sapien, eu tempor nunc. Nam sollicitudin fermentum justo sit amet fringilla. Mauris tortor justo, viverra at pharetra ut, vehicula sit amet velit. Proin bibendum tincidunt metus in feugiat. Maecenas ornare tempus magna vitae accumsan. Aliquam lobortis tempor velit, eget efficitur elit accumsan lacinia. Suspendisse a suscipit dolor.
\nNulla facilisi. Etiam vulputate aliquet massa, eget malesuada est finibus eu. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus accumsan lacinia nisi, et semper enim vulputate a. Vestibulum et purus quis ipsum pellentesque tempor. Nam vitae ante viverra eros finibus iaculis id sed nisi. Cras porttitor tortor et mi tincidunt posuere. Suspendisse lacinia hendrerit tortor, et molestie odio. Nullam nisl magna, pretium non blandit ut, pharetra quis diam. Praesent non eleifend risus. Suspendisse potenti. Sed vitae augue eu tellus pretium ultrices. Sed blandit tincidunt est, sit amet vestibulum libero vehicula fringilla.\n\nNulla facilisi. Vivamus fermentum sodales ultrices. Nulla efficitur ligula eget porttitor faucibus. Suspendisse malesuada lorem vitae eros cursus vulputate. Mauris sed odio vel ante mattis tincidunt vel ac diam. Duis id egestas libero. Donec sapien augue, aliquam ut convallis vel, sodales at quam. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur ullamcorper tempor pellentesque. Curabitur vitae turpis eleifend, tincidunt est quis, pulvinar ligula. Maecenas ullamcorper lectus lacinia, aliquet lorem elementum, consectetur augue. Fusce tempor diam sapien. Nunc at porttitor ex, quis posuere sapien. Nulla elit est, fermentum sit amet nisl quis, malesuada vestibulum quam.\n\nMauris eu dolor et dui aliquet pharetra. Integer tristique iaculis tellus at gravida. Cras tempor nec purus in mollis. Aliquam arcu ante, lobortis id efficitur sed, rutrum non libero. Phasellus elementum iaculis efficitur. Curabitur a sapien vel sem porta tincidunt. Quisque iaculis erat ac varius dignissim. Vivamus ac condimentum mi.\n\nInteger vitae tellus et turpis gravida venenatis. Sed lorem mi, molestie non bibendum et, tempor non enim. Cras tortor enim, ultricies id nisi sed, tincidunt feugiat diam. Praesent facilisis ligula lorem, a ultricies metus interdum ac. Nullam sodales elementum mi vitae feugiat. Morbi dignissim erat quis nunc consectetur, at aliquet ligula aliquam. Nunc elementum maximus dolor, et tincidunt sem dapibus ac. Vestibulum lobortis risus orci, a pharetra nulla tincidunt id. Maecenas non mi lorem. Mauris efficitur vel erat nec porttitor. Maecenas varius felis eu massa aliquet, eu fermentum velit congue. Maecenas suscipit mauris sem, auctor tristique massa accumsan a. In in sodales elit. Proin diam lectus, tristique at diam quis, euismod dapibus sapien. Nulla suscipit diam orci, at mattis nunc tempor at. </string>

    <!-- Calculator Page -->
    <string name="activity_calculator_title">Statistics Calculator</string>
    <string name="activity_calculator_explanation">Please enter a list of numbers in the field below to get statistics on them</string>
    <string name="activity_calculator_input_hint">1,2,3</string>
    <string name="activity_calculator_reset">Reset</string>
    <string name="activity_calculator_result_mean_key">Mean</string>
    <string name="activity_calculator_result_median_key">Median</string>
    <string name="activity_calculator_input_validation_invalid">Unable to understand that input. Please try again.</string>
    <string name="activity_julia_table_heading_input_real">Real Argument</string>
    <string name="activity_julia_table_heading_input_imaginary">Imaginary</string>
    <string name="activity_julia_table_heading_axis_real_min">Real axis min</string>
    <string name="activity_julia_table_heading_axis_real_max">Real axis max</string>
    <string name="activity_julia_table_heading_axis_imaginary_min">Imaginary Min</string>
    <string name="activity_julia_table_heading_axis_imaginary_max">Imaginary Max</string>
</resources>
